fix: allow all origins for CORS
Made-with: Cursor